--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <body>
         <h1>I'm a header 1!</h1>
+        <img src="https://avatars.githubusercontent.com/u/72122115?v=4">
 
         Some content.
     </body>
