--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <body>
         <h1>I'm a header 1!</h1>
         <img src="https://avatars.githubusercontent.com/u/72122115?v=4">
+        <ol>
+         <li>This</li>
+         <li>Is an</li>
+         <li>Ordered list</li>
+       </ol>
+        
+       <ul>
+        <li>This</li>
+        <li>Is an</li>
+        <li>unordered list</li>
+    </ul>
+
+
 
         Some content.
     </body>
