--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li>Is an</li>
         <li>unordered list</li>
     </ul>
+        <a href="https://github.com">This is a link to GitHub!</a>
 
 
 
